travis.yml: continue in the build directory

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ addons:
 
 script:
     - mkdir b && cd b && cmake -DCMAKE_BUILD_TYPE=Release ../
-    - cd b && cmake --build .
+    - cmake --build .
